# raylib_dungeon_party

./: .gitignore  CMakeLists.txt  README.md  README1.md  notes.txt  project_structure.txt
src/: main.c
src/components/: active_component.h  collider_component.h  component_manager.c  component_manager.h  movement_component.h  sprite_component.h  tag_component.c  tag_component.h  transform_component.c  transform_component.h  velocity_component.h
src/core/: globals.c  globals.h  logger.c  logger.h
src/entities/: entity.c  entity.h  player_entity.c  player_entity.h
src/systems/: draw_sprites.c  draw_sprites.h  global_input.c  global_input.h  inputs.c  inputs.h  player_actions.c  player_actions.h  player_movement.h  readme_notepad.h  systems.c  systems.h  update_entity_transforms.c  update_entity_transforms.h
src/utils/: defines.h  globals.h  grid.c  grid.h
